--- a/test/fixtures/sales.yml
+++ b/test/fixtures/sales.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_id: 
+  customer_id: 
   shop_id: 
   quantity: 1
   time: 2015-05-18 17:44:06
@@ -9,7 +9,7 @@ one:
   status: MyString
 
 two:
-  user_id: 
+  customer_id: 
   shop_id: 
   quantity: 1
   time: 2015-05-18 17:44:06
